[package]
name = "async_fence"
version = "0.3.0"
authors = ["Bennett Petzold <dansecob.dev@gmail.com>"]
edition = "2024"
rust-version = "1.85"
description = "no-std async fences and OnceLock"
repository = "https://github.com/Bennett-Petzold/async_fence"
license = "MPL-2.0"
categories = ["no-std::no-alloc", "asynchronous"]
keywords = ["fence", "once"]
readme = "README.md"

[features]
alloc = []
once = []

[dependencies]
spin = "0.10"

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
